[package]
name = "bitcoin-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Compiler App"]
description = "Compile Bitcoin Core and Electrs from source on macOS"

[[bin]]
name = "bitcoin-compiler"
path = "src/main.rs"

[dependencies]
# GUI framework — eframe/egui is a pure-Rust immediate-mode GUI.
# We chose it over Tauri because:
#   - Zero web-runtime dependency; no Node.js/npm build step
#   - Metal-accelerated rendering on Apple Silicon via wgpu
#   - Straightforward tokio integration via shared channels
#   - .app bundling via cargo-bundle without a second build pipeline
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "wgpu",              # Metal on macOS
    "accesskit",
] }
egui = "0.28"

# Async runtime for background process spawning / HTTP calls
tokio = { version = "1", features = ["full"] }

# HTTP client for GitHub API (async, json feature for automatic serde)
reqwest = { version = "0.12", features = ["json"] }

# Serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured error handling
anyhow = "1"
thiserror = "1"

# Regex for version parsing
regex = "1"

# Native file picker and message dialogs (NSOpenPanel on macOS)
rfd = "0.14"

# CPU count detection
num_cpus = "1"

# ── macOS bundle metadata (used by cargo-bundle) ──────────────────────────────
[package.metadata.bundle]
name           = "Bitcoin Compiler"
identifier     = "com.bitcoincompiler.app"
icon           = []
version        = "0.1.0"
copyright      = "Copyright 2024"
category       = "developer-tool"
short_description = "Compile Bitcoin Core and Electrs from source on macOS"

# ── Release profile: optimised + stripped binary ──────────────────────────────
[profile.release]
opt-level = 3
lto       = "thin"
strip     = true
codegen-units = 1
